--- a/src/css/style-dashboard.css
+++ b/src/css/style-dashboard.css
@@ -15,6 +15,7 @@
   border-radius: 15px;
   background-color: #f1f8ff;
   padding: 10px 20px;
+  margin: 2rem;
 }
 .button-espace {
   display: flex;
